# jtx1inst

./: .gitignore  CMakeLists.txt  README.org
doc/: config
example/: mdlbench.c  tx1inst.c
include/: bench.h  cuda.h  debug.h  jtx1pow.h  jtx1rate.h  numeric.h  tx1.h  tx1inst.h  tx1pow.h  tx1rate.h  tx1temp.h  vars.h
samples/: jtx1inst_demo.c
src/: bench.c  jtx1pow.c  jtx1rate.c  jtx1temp.c  numeric.c  tx1pow.c  tx1rate.c  tx1temp.c
